[package]
name = "proxmox_backup_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"] }  # ✅ FIXED
serde = { version = "1.0", features = ["derive"] }  # Ensure `derive` feature is enabled
serde_json = "1.0.140"
once_cell = "1.19.0"
native-tls = "0.2"
tokio-native-tls = "0.3"
libc = "0.2"
tokio = { version = "1.44.1", features = ["full"] }
thiserror = "2.0.12"
url = "2.5.4"
mockall = "0.13.1"
http = "0.2"
hyper = "0.14"
http-body = "0.4"
http-body-util = "0.1"
bytes = "1"
regex = "1.5"


[lib]
name = "proxmox_backup_lib"    # Change this to your actual library name
crate-type = ["cdylib"]  # This tells Rust to build a dynamic library (.dll)
